# mcp-fast-search-code

./: .gitignore  README.md  README_RU.md  pyproject.toml  space-ngrams.example.toml
src/: server.py
